ephy-profile-utils: fix memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=677720